--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -1,11 +1,53 @@
 .container {
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-image: url("../../../public/images/dots.svg");
+    background-position: -200px -30px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.container_title {
+    padding: 0 20px 80px;
+    font-size: 36px;
+    margin: 0 auto;
+}
+
+.container_subtitle {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0 auto;
+    color: var(--secondary);
+    letter-spacing: 1.23px;
+}
+
+.diplomas {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid var(--border);
+    border-radius: var(--r-body);
+    background-color: var(--white);
+    position: relative;
+}
+
+.diplomas > div {
+}
+
+.diplomas > img {
+    object-fit: cover;
+}
+
+.about_container {
+    display: flex;
     gap: 80px;
 }
 
-.imgContainer {
+.img_container {
     width: 100%;
-    height: 300px;
     position: relative;
 }
 
@@ -14,13 +56,20 @@
     border-bottom: 3px solid var(--primary);
 }
 
-.textContainer {
+.img_title {
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: -0.5px;
+    line-height: 1.8;
+}
+
+.text_container {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.title {
+.text_title {
     font-size: 20px;
     letter-spacing: -0.5px;
     line-height: 1.8;
@@ -29,13 +78,33 @@
 
 .item {
     flex: 1;
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding: 20px;
+    border: 1px solid var(--border);
+    border-radius: var(--r-body);
+    background-color: var(--white);
 }
 
 .desc {
     font-size: 15px;
     text-align: justify;
+}
+
+.full {
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: 100;
+    background-color: rgba(15, 33, 55, 0.70);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.doNotShow {
+    display: none;
 }
