--- a/src/app/components/Button/button.module.css
+++ b/src/app/components/Button/button.module.css
@@ -6,6 +6,11 @@
     border-radius: 5px;
     width: max-content;
     color: white;
+    transition: all linear 0.3s;
+}
+
+.primary:hover {
+    box-shadow: var(--secondary) 0 2px 10px !important;
 }
 
 .secondary {
@@ -21,5 +26,5 @@
 }
 
 .secondary:hover {
-    box-shadow: var(--secondary-red) 0 2px 10px !important
+    box-shadow: var(--secondary-red) 0 2px 10px !important;
 }
