--- a/src/app/components/sections/banner/banner.module.css
+++ b/src/app/components/sections/banner/banner.module.css
@@ -4,6 +4,10 @@
     gap: 100px;
     padding-top: 60px;
     padding-bottom: 50px;
+    background-image: url("../../../../../public/images/dots.svg");
+    background-position: 200px 0;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 .item {
@@ -57,53 +61,6 @@
     padding: 20px;
     border-radius: var(--r-body);
     box-shadow: rgba(25, 46, 68, 0.12) 0 7px 14px;
-}
-
-.form {
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.input {
-    padding: 15px;
-    background-color: transparent;
-    border: 2px solid var(--primary);
-    border-radius: var(--r-section);
-    outline: none;
-    color: var(--white);
-    font-size: 20px;
-    font-weight: bold;
-    transition: border-color linear 0.3s;
-}
-
-.input:focus {
-    box-shadow: var(--primary) 0 2px 10px;
-}
-
-.button {
-    width: 300px;
-    padding: 20px;
-    cursor: pointer;
-    background-color: var(--primary);
-    border: none;
-    border-radius: 5px;
-    color: var(--white);
-    font-weight: bold;
-    transition: all linear 0.3s;
-}
-
-.button:hover {
-    box-shadow: var(--primary) 0 2px 10px;
-}
-
-.privacy {
-    font-size: 10px;
-}
-
-.privacy_link {
-    text-decoration: underline;
 }
 
 .desc {
