Added not found page

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,3 +3,11 @@
     flex-direction: column;
     gap: 60px;
 }
+
+.not_found_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    flex-direction: column;
+}
