--- a/src/app/components/Button/button.module.css
+++ b/src/app/components/Button/button.module.css
@@ -5,7 +5,7 @@
     border: none;
     border-radius: 5px;
     width: max-content;
-    color: white;
+    color: var(--white);
     font-size: 16px;
     letter-spacing: 1px;
     transition: all linear 0.3s;
@@ -22,7 +22,7 @@
     border: none;
     border-radius: 30px;
     width: max-content;
-    color: white;
+    color: var(--white);
     font-size: 16px;
     transition: all linear 0.3s;
 }
