--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -9,9 +9,11 @@
 }
 
 .container_title {
-    padding: 0 20px 80px;
+    padding: 0 30px 40px;
     font-size: 36px;
-    margin: 0 auto;
+    text-align: center;
+    letter-spacing: -0.5px;
+    font-weight: 700;
 }
 
 .container_subtitle {
