--- a/src/app/components/DarkModeToggle/darkModeToggle.module.css
+++ b/src/app/components/DarkModeToggle/darkModeToggle.module.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2px 2px 2px;
+    padding: 2px;
     cursor: pointer;
     position: relative;
 }
