--- a/src/app/components/Form/form.module.css
+++ b/src/app/components/Form/form.module.css
@@ -11,7 +11,7 @@
     border: 2px solid var(--primary);
     border-radius: var(--r-section);
     outline: none;
-    color: var(--white);
+    color: var(--primary);
     font-size: 20px;
     font-weight: bold;
     transition: border-color linear 0.3s;
