--- a/src/app/contact/contacts.module.css
+++ b/src/app/contact/contacts.module.css
@@ -2,9 +2,11 @@
 }
 
 .title {
-    padding: 0 20px 40px;
+    padding: 0 30px 40px;
     font-size: 36px;
     text-align: center;
+    letter-spacing: -0.5px;
+    font-weight: 700;
 }
 
 .subtitle {
@@ -89,12 +91,12 @@
 }
 
 .contact > span {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
 }
 
 .contact > a {
     color: var(--secondary);
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 600;
 }
