--- a/src/app/privacy_policy/pryvacy_policy.module.css
+++ b/src/app/privacy_policy/pryvacy_policy.module.css
@@ -7,6 +7,9 @@
 .title {
     font-size: 36px;
     margin: 30px auto;
+    padding: 0 30px 40px;
+    letter-spacing: -0.5px;
+    font-weight: 700;
 }
 
 .subtitle {
