--- a/src/app/techniques/techniques.module.css
+++ b/src/app/techniques/techniques.module.css
@@ -5,9 +5,11 @@
 }
 
 .title {
-    padding: 0 20px 40px;
+    padding: 0 30px 40px;
     font-size: 36px;
     text-align: center;
+    letter-spacing: -1.5px;
+    font-weight: 700;
 }
 
 .subtitle {
