Fixed some bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@ a {
 }
 
 .dark {
-    --primary: #DCDDD8;
+    --primary: #aeb0a6;
     --secondary: #7f9ba6;
     --white: #354B5E;
     --blue: #425e91;
