--- a/src/app/techniques/[technique]/technique.module.css
+++ b/src/app/techniques/[technique]/technique.module.css
@@ -20,7 +20,9 @@
 }
 
 .text {
-    font-size: 16px;
+    font-size: 15px;
+    color: var(--primary);
+    line-height: 1.73;
     display: flex;
     flex-direction: column;
     gap: 10px;
