--- a/src/app/contact/contacts.module.css
+++ b/src/app/contact/contacts.module.css
@@ -53,21 +53,22 @@
 }
 
 .contacts {
-    margin-top: 80px;
+    margin-top: 50px;
     display: flex;
     gap: 100px;
+    margin-bottom: 15px;
 }
 
 .contacts > div {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
 }
 
 .contact > span {
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 15px;
+    font-weight: 600;
 }
 
 .contact > a {
